feat: TICKET-00000 add ObjectMapperExample